# nikdvy-blog

./: forms.py  main.py  pyproject.toml  requirements.txt
templates/: footer.html  header.html  index.html  login.html  post.html  register.html
